# memanto

./: README.md
.github/workflows/: bounty-label.yml  (+1 more)
examples/benchmarks/memanto-vs-mem0/: dashboard.py  evaluator.py  harness.py  pyproject.toml  reporter.py  run_benchmark.py
examples/benchmarks/memanto-vs-mem0/adapters/: base.py  mem0_adapter.py  memanto_adapter.py
examples/claudecode-skills-memanto/: .env.example  CLAUDE.md  README.md  app.py  demo_full.py  demo_session_1.py  demo_session_2.py  pyproject.toml  requirements.txt
examples/claudecode-skills-memanto/.claude-plugin/: plugin.json
examples/claudecode-skills-memanto/memanto_skills/: __init__.py  cli.py  client.py  extractor.py  profile.py  utils.py
examples/claudecode-skills-memanto/skills/diagnose-with-memory/: SKILL.md
examples/claudecode-skills-memanto/skills/grill-with-memory/: SKILL.md
examples/claudecode-skills-memanto/skills/handoff-with-memory/: SKILL.md
examples/claudecode-skills-memanto/skills/memanto-profile/: SKILL.md
examples/claudecode-skills-memanto/skills/memanto-recall/: SKILL.md
examples/claudecode-skills-memanto/skills/memanto-store/: SKILL.md
examples/claudecode-skills-memanto/skills/setup-memanto-skills/: SKILL.md
examples/claudecode-skills-memanto/skills/tdd-with-memory/: SKILL.md
scripts/: generate_openapi.py
tests/: test_api.py  test_cli.py  test_cors_fix.py  test_memory_format.py  test_memory_read_as_of.py  test_memory_read_confidence.py  test_memory_read_temporal_recall.py  test_output_path_traversal.py  test_temporal_helpers.py  test_unit.py
(+75 files in other folders)
