[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memanto-skills"
version = "0.1.0"
description = "Cross-session memory layer for Claude Code / mattpocock skills"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "memanto>=0.1.0,<0.2.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.35.0",
]

[project.scripts]
memanto-skills = "memanto_skills.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["memanto_skills"]
